--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
-SERVER_PORT = 9005
+PORT = 9005
 MONGO_CONNECT_URI = mongodb+srv://admin:admin@blogger.pir0ajr.mongodb.net/blogger
 JWT_SECRET_KEY=Blogger_JWT_Secret_Key_!!!@@@###
