--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,3 @@
 PORT = 9005
-MONGO_CONNECT_URI = mongodb+srv://admin:admin@blogger.pir0ajr.mongodb.net/blogger
+MONGO_CONNECT_URI = db
 JWT_SECRET_KEY=Blogger_JWT_Secret_Key_!!!@@@###
